# catalyst-quickstarts

./: .gitignore  README.md
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/dotnet-container/: devcontainer.json
.devcontainer/java-container/: devcontainer.json
.devcontainer/python-container/: devcontainer.json  post-create.sh
.github/workflows/: invoke_csharp.yaml  invoke_java.yaml  invoke_javascript.yaml  invoke_python.yaml  keyvalue-csharp.yaml  keyvalue-go.yaml  keyvalue-java.yaml  keyvalue-javascript.yaml  keyvalue-python.yaml  pubsub-csharp.yaml  pubsub-go.yaml  pubsub-java.yaml  pubsub-javascript.yaml  pubsub-python.yaml  pubsub_csharp.yaml  pubsub_java.yaml  pubsub_javascript.yaml  pubsub_python.yaml  state_csharp.yaml  state_java.yaml  state_javascript.yaml  state_python.yaml  workflow_csharp.yaml  workflow_java.yaml  workflow_javascript.yaml  workflow_python.yaml
agents/adk/: Dockerfile  README.md  crash_test.py  dev-crash-test.yaml  dev-python-adk.yaml  main.py  pyproject.toml  requirements.txt  test.http
agents/base/: Dockerfile  pyproject.toml  requirements.txt
agents/claude-agents/: README.md  crash_test.py  dev-crash-test.yaml  dev-python-claude.yaml  main.py  pyproject.toml  requirements.txt  test.http
agents/crewai/: README.md  crash_test.py  dev-crash-test.yaml  dev-python-crewai.yaml  main.py  pyproject.toml  requirements.txt  test.http
agents/deepagents/: README.md  crash_test.py  dev-crash-test.yaml  dev-python-deepagents.yaml  dev-subagent-workflows.yaml  main.py  (+4 more)
dapr-agents/: README.md
multi-agent/: README.md
(+496 files in other folders)
